			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04b: *********************************

IMP: (10/28/05, SMR) Changed the window "view" to a window "focus".

BUG: (10/28/05, SMR) Deleting nodes and exports produces an error message.
FIX: In CircuitChanges.eraseObjectsInList(), do not delete nodes already deleted.

IMP: (10/27/05, SMR) Technology Editor produces proper Java.

IMP: (10/27/05, GVG) More changes towards DRC deck handling. Import/Export of DRC deck under Tools->DRC.
Typesafe enums for DRC options. Generic DTD for DRC rules and can be loaded using EntityResolver.resolveEntity.

BUG: (10/26/05, SMR) Auto-stitcher connects pure-layer nodes of well (Bug #388).
FIX: Disallow pure-layer nodes in auto-stitching.

BUG: (10/26/05, SMR) Edit-in-place looks bad (Bug #635).
FIX: In EditWindow.java, change the method paint() to paintComponent().

BUG: (10/26/05, SMR) Auto-stitcher connects annotation text objects (Bug #695).
FIX: Disallow Generic technology nodes in auto-stitching.

IMP: (10/26/05, SMR) Spice output sorts subcircuit signal names (Bug #694).

IMP: (10/26/05, SMR) Auto-stitching avoids adding duplicate arcs.

IMP: (10/26/05, SMR) "Find Text" dialog now has "alt" keys on its buttons (Bug #671).

IMP: (10/25/05, SMR) Waveform window signal order saved in preferences, not cells.

BUG: (10/25/05, SMR) Double-clicking text does not edit it in-place.

BUG: (10/25/05, GVG) rename dialog resets to current cell every time you hit (bug #692)
FIX: lastSelectedCell in rename job didn't include view abbreviation.

BUG: (10/25/05, SMR) Double-clicking text does not edit it in-place (Bug #693).
FIX: In EditMenu.getInfoCommand(), do not ignore text that is not special.
     In SpecialProperties.java, rehighlight the text after the "more" button is clicked.

BUG: (10/25/05, DN) PortCharacteristic of Exports is not undoable.